load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
]

cc_library(
    name = "array",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        "@boost//core",
        "@boost//config",
        "@boost//assert",
        "@boost//static_assert",
        "@boost//throw_exception",
    ],
)
