load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
]

cc_library(
    name = "array",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        "@boost//libs/core",
        "@boost//libs/config",
        "@boost//libs/assert",
        "@boost//libs/static_assert",
        "@boost//libs/throw_exception",
    ],
)
